--- a/style.css
+++ b/style.css
@@ -1,1 +1,259 @@
 
+/* basics! */
+html {
+    box-sizing: border-box;
+    font-size: 100%;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+body {
+    padding: 20px;
+    color: #1d1e1e ;
+    line-height: 1.3;
+    font-family: henderson-sans-basic, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: #1d1e1e ;
+    width: 100%;
+}
+
+*, body {
+    margin: 0; padding: 0;
+}
+
+a {
+    -o-transition:.3s;
+    -ms-transition:.3s;
+    -moz-transition:.3s;
+    -webkit-transition:.3s;
+    transition:.3s;
+    color: #1d1e1e;
+}
+
+a:hover {
+    color: #1d1e1e;
+}
+
+b {
+    font-weight: 600;
+}
+
+i, .project-information {
+    font-family: cambria, serif;
+}
+
+/* multiple */
+header, footer, main {
+    width: 80%;
+    margin: 0 auto;
+    padding: 30px 20px;
+}
+
+#navigation li, #header-links li, #footer-links li {
+    display: inline;
+}
+
+aside, footer {
+    background-color: white;
+}
+
+/* header */
+#header-links {
+    float: right;
+    margin-top: 14px;
+}
+
+#header-links li {
+    margin-left: 10px;
+}
+
+#navigation {
+    text-transform: uppercase;
+    margin-top: 5px;
+}
+
+#navigation li {
+    margin-right: 10px;
+    font-size: 1rem;
+}
+#page-title {
+    font-weight: 300;
+}
+
+/* main */
+main {
+    margin: 5px auto;
+}
+
+#content {
+    display: block; 
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+article {
+    width: 50%;
+    margin-bottom: -4px;
+}
+
+.project-thumbnail {
+    width: 100%;
+    margin:0;
+    padding: 0;
+}
+
+.project-date {
+    margin-top: 10px;
+    font-weight: normal;
+    font-size: 1.1rem;
+    color: #888;
+}
+
+.project-title {
+    font-weight: 600;
+    line-height: 130%;
+    margin: 10px 0;
+}
+
+.project-information {
+    font-size: 1.25rem;
+    line-height: 140%;
+}
+
+.project h2, .project h3, .project p {
+    padding: 0 10px;
+}
+
+/* about */
+#about-page, #contact {
+    text-align: center;
+    padding: 0 50px;
+    width: 800px;
+    margin: 0 auto;
+}
+
+#headshot {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+}
+
+.stand-out {
+    display: block;
+    font-size: 130%;
+    margin: 10px 0;
+}
+
+#about-page p {
+    margin: 10px;
+}
+
+#skills {
+    width: 90%;
+    margin: 20px auto;
+    line-height: 2.5rem;
+    font-size: 0.9rem;
+}
+
+#skills li {
+    display: inline;
+    background-color: #1d1e1e;;
+    padding: 5px 12px 8px;
+    margin: 0 4px;
+    border-radius: 50px;
+    color: white;
+} 
+
+#call {
+    background: #6433ec;
+    width: 142px;
+    margin: 0 auto;
+    padding: 11px 13px;
+    border-radius: 30px;
+    text-align: center;
+    color: white;
+    margin-bottom: 10px;
+    font-size: 1rem;
+}
+
+#contact img {
+    width: 100%;
+    margin: 20px 0;
+}
+
+
+/* footer */
+footer {
+    text-align: center;
+}
+
+#footer-links {
+    display: none;
+}
+
+#footer-links li {
+    margin: 0 5px;
+}
+
+/* media queries */
+@media (max-width: 950px) {
+
+    /* multiple */
+    header, footer, main {
+        width: 100%;
+        padding: 30px 0;
+    }
+
+    /* header */
+    #header-links {
+        display: none;
+    }
+
+    header {
+        text-align: center;
+        padding-bottom: 0;
+    }
+
+    /* about */
+    #about-page, #contact {
+        padding: 0;
+        width: 100%;
+    }
+    #skills {
+        width: 95%;
+    }
+
+    /* main */
+    #content {
+        display: block; 
+    }
+
+    article {
+        width: 100%;
+    }
+
+    /* footer */
+    #footer-links {
+        display: block;
+    }
+}
+
+@media (max-width: 700px) {
+    #headshot {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+    #about-page {
+        text-align: left;
+    }
+    #skills {
+        text-align: center;
+    }
+}
