--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ article {
 } 
 
 #call {
-    background: #6433ec;
+    background: #4e48c3;
     width: 142px;
     margin: 0 auto;
     padding: 11px 13px;
